Overflow fixed on mobile menu.

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -2,6 +2,10 @@ html {
   font-size: 62.5%; // 10px
   box-sizing: border-box;
   overflow: auto;
+
+  &.noscroll {
+    overflow: hidden;
+  }
 }
 *,
 *::before,
